<resources>
    <string name="app_name">Recipe Market</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="person">Person</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">Profile</string>
    <string name="avatar">Avatar</string>
    <string name="change_username">Change Username</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="done">Done</string>
    <string name="change_details">Change Details</string>
    <string name="update_details">Update Details</string>
    <string name="write_your_note_here">Write Your Note Here</string>
    <string name="tag">Tag</string>
    <string name="search">Search</string>
    <string name="tab_text_1">Supermarkets</string>
    <string name="tab_text_2">Recipes</string>
    <string name="tab_text_3">Discover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved_supermarkets">Saved Supermarkets</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="discover_supermarkets_near_you">Discover Supermarkets Near You!</string>
    <string name="save">Save</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="rating">Rating:</string>
    <string name="recipes">Recipes</string>
    <string name="find_recipes_by_specifying_your_desired_macros">Find recipes by specifying your desired macros</string>
    <string name="max_carbs">Max carbs</string>
    <string name="max_protein">Max protein</string>
    <string name="max_fat">Max fat</string>
    <string name="find_recipes">Find Recipes</string>
    <string name="fat">Fat:</string>
    <string name="protein">Protein:</string>
    <string name="carbs">Carbs:</string>
    <string name="nutrition">Nutrition:</string>
    <string name="todo">TODO</string>
    <string name="clear_list">Clear list</string>
    <string name="add_ingredients_to_shopping_list">Add ingredients to shopping list</string>
</resources>